docs: add documentation for delete project
