# docs/swagger.yaml
@@ -21,6 +21,11 @@ definitions:
       data:
         $ref: '#/definitions/schemas.ProjectResponse'
     type: object
+  projectHandler.DeleteProjectResponse:
+    properties:
+      data:
+        $ref: '#/definitions/schemas.ProjectResponse'
+    type: object
   projectHandler.ErrorResponse:
     properties:
       errorCode:
@@ -29,6 +34,28 @@ definitions:
         type: string
     type: object
   projectHandler.GetProjectResponse:
+    properties:
+      data:
+        $ref: '#/definitions/schemas.ProjectResponse'
+    type: object
+  projectHandler.UpdateProjectRequest:
+    properties:
+      client:
+        type: string
+      deadline:
+        type: string
+      description:
+        type: string
+      isPaid:
+        type: boolean
+      status:
+        type: string
+      title:
+        type: string
+      value:
+        type: number
+    type: object
+  projectHandler.UpdateProjectResponse:
     properties:
       data:
         $ref: '#/definitions/schemas.ProjectResponse'
@@ -78,7 +105,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/projectHandler.GetProjectResponse'
+            $ref: '#/definitions/projectHandler.DeleteProjectResponse'
         "400":
           description: Bad Request
           schema:
@@ -149,6 +176,44 @@ paths:
           schema:
             $ref: '#/definitions/projectHandler.ErrorResponse'
       summary: Create project
+      tags:
+      - Project
+    put:
+      consumes:
+      - application/json
+      description: Update a project
+      parameters:
+      - description: Project ID
+        in: query
+        name: id
+        required: true
+        type: string
+      - description: Request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/projectHandler.UpdateProjectRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/projectHandler.UpdateProjectResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/projectHandler.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/projectHandler.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/projectHandler.ErrorResponse'
+      summary: Update project
       tags:
       - Project
 swagger: "2.0"
